data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_929.wast
;; 10. **Test Case**: Develop a complex scenario within a loop where `call` instructions change the function table, affecting subsequent `call_indirect` instructions.     - **Constraint Check**: Validate dynamic changes to function table and its reflection within subsequent indirect calls.     - **Improper Function Call or Return Handling**: Incorrect updates or mismanagement of function table leading to erroneous indirect call results.

(assert_invalid
  (module (table funcref (elem 0) (func $f))
    (func $f (result i32) (i32.const 1))
    (func $g
      (i32.const 0)
      (call_indirect (type $sig))
      (loop (result i32)
        (i32.const 0)
        (call $f)
        (br 0)
      )
    )
    (type $sig (func (result i32)))
  )
  "type mismatch"
)